[package]
name = "rn_bot"
version = "0.1.0"
authors = ["Wyatt Jacob Herkamp <wherkamp@kingtux.me>"]
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["mysql", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
r2d2_mysql = "21.0.0"
dotenv = "0.15.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
rraw = "0.0.3"
rand = "0.8.4"
craftping = "0.3.0"
hyper = "0.14.7"
hyper-tls = "0.5.0"
chrono = "0.4.19"
hostname = "0.3.1"
strum = { version = "0.24.0", features = ["derive"] }
strum_macros = "0.24.0"
derive_more = "0.99.17"
regex = "1.5.4"
num-format = "0.4.0"
log = "0.4.14"
tracing-appender = "0.2"
tracing-subscriber = "0.3.3"
rust-embed = { version = "6.3.0", features = ["interpolate-folder-path"] }
thiserror = "1.0.30"
[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend", "model", "client","unstable_discord_api"]
version = "0.10.10"
[dependencies.tokio]
version = "1.15.0"
features = ["macros", "rt-multi-thread"]
[build-dependencies]
vergen = "7.3.1"
